RPP: draw cursor line in the overlays
This CL moves the vertical line drawn when holding shift to the new
overlays system. It does not put this behind a flag, as I think it is an
improvement on the experience for all users.

Now, the line will extend across the entire UI, rather than across only
the canvas you hover over. This makes it much easier to line things up
when debugging a trace.

Bug: 348619191
Change-Id: I74ea7ba3ac4a7309de1378e4456644e83790add8
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5688839
Auto-Submit: Jack Franklin <jacktfranklin@chromium.org>
Commit-Queue: Jack Franklin <jacktfranklin@chromium.org>
Reviewed-by: Alina Varkki <alinavarkki@chromium.org>
Commit-Queue: Alina Varkki <alinavarkki@chromium.org>

--- a/front_end/panels/timeline/timelineFlameChartView.css
+++ b/front_end/panels/timeline/timelineFlameChartView.css
@@ -57,6 +57,14 @@
   }
 }
 
+.overlay-type-CURSOR_TIMESTAMP_MARKER {
+  top: 0;
+  bottom: 0;
+  width: 2px;
+  background-color: var(--sys-color-primary);
+  pointer-events: none;
+}
+
 .timeline-entry-tooltip-element:not(:empty) {
   z-index: 2000;
   position: absolute;
