[RPP Observations] Add page and device scope selectors
Example:
https://screenshot.googleplex.com/5oPAy7AojQkGtLr

"No data" example:
https://screenshot.googleplex.com/A6kBfc8jEKEZvvD

- Page scope selector for choosing URL/origin scope
- Device mode selector for choosing desktop/mobile/all/auto
- Auto device optoin will select the field data based on emulation
- URL -> origin fallback is removed. I'm concerned that doing this
  automatically will be unexpected when the user nagiates to different
  pages.
- Device options will show "No data" if there is no CrUX data for that
  device.
- Page scope options will show "No data" if there is no CrUX data for
  any device in that page scope.
- Removes tablet specific field data

Bug: 313906362
Change-Id: I4f72945a2a7805a447f963598cbef08a72f12154
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5691494
Commit-Queue: Adam Raine <asraine@chromium.org>
Reviewed-by: Paul Irish <paulirish@chromium.org>

--- a/front_end/panels/timeline/components/liveMetricsView.css
+++ b/front_end/panels/timeline/components/liveMetricsView.css
@@ -222,9 +222,20 @@
   flex-shrink: 0;
 }
 
-.throttling-setting {
+.live-metrics-option {
   display: flex;
-  flex-direction: row;
+  flex-flow: row nowrap;
   align-items: center;
   gap: 8px;
+  max-width: 100%;
+  text-wrap: nowrap;
+}
+
+.live-metrics-option > devtools-select-menu {
+  min-width: 0;
+  max-width: 100%;
+}
+
+.no-data {
+  color: var(--sys-color-token-subtle);
 }
