--- a/front_end/panels/timeline/timelinePanel.css
+++ b/front_end/panels/timeline/timelinePanel.css
@@ -171,7 +171,7 @@
 
 .timeline-details-view-row {
   padding-left: 10px;
-  line-height: 1.3;
+  min-height: 20px;
 }
 
 .timeline-details-view-block .timeline-details-stack-values {
