RPP: show sidebar metrics per-navigation
This CL updates the sidebar to show metrics per navigation.

It does not yet update the insights to be shown per-navigation, but that
will come in a follow-up CL (this work is all behind a flag anyway).

Bug: 348591291
Change-Id: I5230810d42c33f4d5a869414bfb367e069b71712
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5688773
Reviewed-by: Andres Olivares <andoli@chromium.org>
Commit-Queue: Jack Franklin <jacktfranklin@chromium.org>

--- a/front_end/panels/timeline/components/sidebar.css
+++ b/front_end/panels/timeline/components/sidebar.css
@@ -134,3 +134,7 @@ devtools-select-menu {
 .dl-value {
   font-weight: bold;
 }
+
+devtools-performance-sidebar-single-navigation + devtools-performance-sidebar-single-navigation {
+  border-top: 1px solid var(--sys-color-divider);
+}
