[RPP Observations] Move histogram into tooltip
https://screenshot.googleplex.com/C2xH4ubCEwuQEbH

This uses the web componenet dialog element with a defined origin to
create a hover tooltip that contains the field data histogram. The
histogram is always visible and will show "-" for all percentages if
there is no field data.

This CL also adds a `MetricCard` component which makes it easier to
manager the tooltip state of each metric. In the future, I would like
to do more content rendering in the `MetricCard` component iteself, but
for now it is sufficient to pipe everything though `<slot>` elements.

Bug: 313906362
Change-Id: I2e421c8c29f475e60bb678fef17cbaa825f4e16a
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5709276
Reviewed-by: Andres Olivares <andoli@chromium.org>
Commit-Queue: Adam Raine <asraine@chromium.org>

--- a/front_end/panels/timeline/components/liveMetricsView.css
+++ b/front_end/panels/timeline/components/liveMetricsView.css
@@ -103,7 +103,8 @@
   text-wrap: nowrap;
 }
 
-.card-metric-values .metric-value {
+.local-value,
+.field-value {
   font-size: 30px;
 }
 
@@ -180,9 +181,8 @@
 }
 
 .field-data-histogram {
-  width: 100%;
   display: grid;
-  grid-template-columns: 50% auto max-content;
+  grid-template-columns: max-content 100px max-content;
   grid-auto-rows: 1fr;
   column-gap: 8px;
   justify-items: flex-end;
@@ -238,4 +238,8 @@
 
 .no-data {
   color: var(--sys-color-token-subtle);
+}
+
+.tooltip-content {
+  margin: 0 6px;
 }
