[RPP] Add Annotation delete button to the sidebar
Add a button to delete an annotation next to every annotation in the sidebar. The button only appear on the annotation hover.

Video: https://screencast.googleplex.com/cast/NTA0NTc1MjYyMjQ4MTQwOHxiYzNlYTM1NC05Yg

Bug: 349530077
Change-Id: Idac8ccab0b144f637e74337fb712cb0ba49e4f2d
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5688844
Reviewed-by: Jack Franklin <jacktfranklin@chromium.org>
Commit-Queue: Alina Varkki <alinavarkki@chromium.org>

--- a/front_end/panels/timeline/components/sidebarAnnotationsTab.css
+++ b/front_end/panels/timeline/components/sidebarAnnotationsTab.css
@@ -6,6 +6,25 @@
 
 .annotations {
   display: block;
+  padding: 0;
+}
+
+.bin-icon {
+  visibility: hidden;
+}
+
+.annotation-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  &:hover {
+    background-color: var(--sys-color-neutral-container);
+
+    .bin-icon {
+      visibility: visible;
+    }
+  }
 }
 
 .annotation {
