Fix margin in shortcut settings when linebreak
Also reducing unnecessary vertical whitespaces as a drive-by.

R=kimanh@chromium.org

Fixed: 351730297
Change-Id: If725ab7c3bdd97c1c10c627fd8a5346b3a0cb1af
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5712149
Commit-Queue: Kim-Anh Tran <kimanh@chromium.org>
Commit-Queue: Yang Guo <yangguo@chromium.org>
Auto-Submit: Yang Guo <yangguo@chromium.org>
Reviewed-by: Kim-Anh Tran <kimanh@chromium.org>

--- a/front_end/panels/settings/keybindsSettingsTab.css
+++ b/front_end/panels/settings/keybindsSettingsTab.css
@@ -8,7 +8,7 @@ header {
   padding: 0 0 6px;
   border-bottom: 1px solid var(--sys-color-divider);
   flex: none;
-  margin-bottom: 25px;
+  margin-bottom: 16px;
 }
 
 h1 {
@@ -166,7 +166,7 @@ h1 {
 
 .keybinds-set-select {
   text-align: right;
-  margin-bottom: 25px;
+  margin-bottom: 16px;
 }
 
 .keybinds-set-select label p {
@@ -176,6 +176,7 @@ h1 {
 
 .keybinds-set-select select {
   margin-left: 6px;
+  margin-top: 6px;
 }
 
 button.text-button {
