[Freestyler] Add report legal issue button to messages
Fixed: 353217175
Change-Id: I20fc6675589ec934e642c0980906fe15f56453ed
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5712591
Reviewed-by: Alex Rudenko <alexrudenko@chromium.org>
Commit-Queue: Ergün Erdoğmuş <ergunsh@chromium.org>
Commit-Queue: Alex Rudenko <alexrudenko@chromium.org>
Auto-Submit: Ergün Erdoğmuş <ergunsh@chromium.org>

--- a/front_end/panels/freestyler/components/provideFeedback.css
+++ b/front_end/panels/freestyler/components/provideFeedback.css
@@ -28,3 +28,13 @@
 .feedback-disclaimer {
   padding: 0 var(--sys-size-4);
 }
+
+.vertical-separator {
+  height: 20px;
+  width: 1px;
+  vertical-align: top;
+  margin: 0 var(--sys-size-2);
+  background: var(--color-background-inverted);
+  opacity: 10%;
+  display: inline-block;
+}
