RPP: add elevation to sidebar floating icon
Bug: 353906376
Change-Id: Id01034c23a60a9d397729ecba6d9d942bbbc6851
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5725271
Reviewed-by: Andres Olivares <andoli@chromium.org>
Auto-Submit: Jack Franklin <jacktfranklin@chromium.org>
Commit-Queue: Andres Olivares <andoli@chromium.org>
Commit-Queue: Jack Franklin <jacktfranklin@chromium.org>

--- a/front_end/panels/timeline/timelineMiniMap.css
+++ b/front_end/panels/timeline/timelineMiniMap.css
@@ -17,6 +17,7 @@
   width: 36px;
   height: 36px;
   border-radius: 50%;
+  box-shadow: var(--drop-shadow-depth-1);
   background: var(--sys-color-cdt-base-container);
 
   &:hover {
