[RPP] LCP discovery sidebar insight
Bug: 350770410
Change-Id: I1913242493b2aaf5819d2485a13a136f799b5f7f
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5739837
Commit-Queue: Jack Franklin <jacktfranklin@chromium.org>
Reviewed-by: Jack Franklin <jacktfranklin@chromium.org>

--- a/front_end/panels/timeline/components/insights/sidebarInsight.css
+++ b/front_end/panels/timeline/components/insights/sidebarInsight.css
@@ -61,3 +61,37 @@
 .dl-value {
   font-weight: bold;
 }
+
+.metric-value-bad {
+  color: var(--app-color-performance-bad);
+}
+
+.metric-value-good {
+  color: var(--app-color-performance-good);
+}
+
+.insight-entry {
+  font-weight: bold;
+  padding-block: 2px;
+  display: flex;
+  align-items: center;
+}
+
+.insight-content {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  padding-block: 10px;
+}
+
+.element-img {
+  max-width: 90%;
+}
+
+.element-img-details {
+  font-weight: bold;
+
+  .element-img-details-size {
+    color: var(--color-text-secondary);
+  }
+}
