--- a/front_end/panels/timeline/components/sidebar.css
+++ b/front_end/panels/timeline/components/sidebar.css
@@ -3,12 +3,26 @@
  * Use of this source code is governed by a BSD-style license that can be
  * found in the LICENSE file.
  */
+:host {
+  display: block;
+  height: 100%;
+}
 
-.sidebar-toggle-button {
-  width: 24px;
-  height: 24px;
-  margin-top: 8px;
-  margin-bottom: 8px;
+.sidebar {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  height: 100%;
+
+  > div {
+    flex-grow: 0;
+  }
+
+  .sidebar-body {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+  }
 }
 
 .tab-bar {
@@ -58,8 +72,29 @@
   background-color: var(--sys-color-divider);
 }
 
-.sidebar-body {
-  padding: 0 10px;
+.navigations-wrapper {
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: stretch;
+  height: 100%;
+
+  details {
+    flex-grow: 0;
+  }
+
+  details[open] {
+    flex-grow: 1;
+  }
+
+  summary {
+    border-top: 1px solid var(--sys-color-divider);
+    border-bottom: 1px solid var(--sys-color-divider);
+    color: var(--color-text-primary);
+    padding: 3px 4px;
+    font: var(--ref-typeface-weight-medium) var(--sys-typescale-body4-size) / var(--sys-typescale-body4-line-height) var(--default-font-family);
+    /* TODO: once crrev.com/c/5741479 lands, we can use this instead. */
+    /* font: var(--sys-typescale-body4-medium); */
+  }
 }
 
 devtools-select-menu {
