--- a/front_end/ui/legacy/inspectorCommon.css
+++ b/front_end/ui/legacy/inspectorCommon.css
@@ -307,10 +307,11 @@ input {
 
     &.small:hover::after,
     &.small:active::before {
-      height: 18px;
-      width: 18px;
-      top: -3px;
-      left: -3px;
+      height: 12px;
+      width: 12px;
+      top: 0;
+      left: 0;
+      border-radius: 2px;
     }
   }
 }
