[RPP]  FIx the indent of the image preview in the details view
Add a new option in the ImagePreview component, so it can be start-aligned or center-aligned

Center one (Element panel): https://screenshot.googleplex.com/8wmmt6Pr4tBTce5
Start-aligned  one (Performance panel): https://screenshot.googleplex.com/8a4XJYJNwFumei4

Bug: 355123117
Change-Id: I4b5f15f5fb99e38dd78f4be3ddeb5eb0f652f364
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5746530
Commit-Queue: Jack Franklin <jacktfranklin@chromium.org>
Reviewed-by: Jack Franklin <jacktfranklin@chromium.org>

--- a/front_end/ui/legacy/components/utils/imagePreview.css
+++ b/front_end/ui/legacy/components/utils/imagePreview.css
@@ -32,6 +32,10 @@
   cursor: pointer;
 }
 
+.image-container > div.start {
+  justify-content: start;
+}
+
 .image-preview-container .row {
   line-height: 1.2;
   vertical-align: baseline;
@@ -39,9 +43,16 @@
 
 .image-preview-container .title {
   padding-right: 0.5em;
-  text-align: right;
   color: var(--sys-color-token-subtle);
   white-space: nowrap;
+
+  &.start {
+    text-align: start;
+  }
+
+  &.center {
+    text-align: end;
+  }
 }
 
 .image-preview-container .description {
