--- a/front_end/panels/timeline/components/sidebarAnnotationsTab.css
+++ b/front_end/panels/timeline/components/sidebarAnnotationsTab.css
@@ -4,6 +4,10 @@
  * found in the LICENSE file.
  */
 
+:host {
+  display: block;
+}
+
 .annotations {
   display: block;
   padding: 0;
@@ -17,6 +21,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 0 10px;
 
   &:hover {
     background-color: var(--sys-color-neutral-container);
