[GM3Restyling] Center checkbox focus pseudo outline
Bug: 353397958
Change-Id: I7ca1564fed897fbf1ef3509ff8586da567fffbd0
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5749005
Auto-Submit: Kateryna Prokopenko <kprokopenko@chromium.org>
Commit-Queue: Changhao Han <changhaohan@chromium.org>
Reviewed-by: Changhao Han <changhaohan@chromium.org>

--- a/front_end/ui/components/input/checkbox.css
+++ b/front_end/ui/components/input/checkbox.css
@@ -32,6 +32,9 @@ input[type="checkbox"] {
 
   &:not(:disabled):focus-visible {
     outline: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
     &::before {
       content: "";
@@ -39,8 +42,6 @@ input[type="checkbox"] {
       width: 15px;
       border-radius: 5px;
       position: absolute;
-      top: -3.5px;
-      left: -3.5px;
       border: 2px solid var(--sys-color-state-focus-ring);
     }
   }
