RPP: add overlay for candy striped time regions
We want this for showing the time that could be saved when optimising
LCP - a way to demonstrate when the request could have started.

https://screenshot.googleplex.com/8w56XhofPeYBrhV

Bug: 343388196, 350770512
Change-Id: I3814c792a31bea7bf1ab57274e8db4754cc9a115
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5749003
Commit-Queue: Nancy Li <nancyly@chromium.org>
Auto-Submit: Jack Franklin <jacktfranklin@chromium.org>
Commit-Queue: Jack Franklin <jacktfranklin@chromium.org>
Reviewed-by: Nancy Li <nancyly@chromium.org>

--- a/front_end/panels/timeline/timelineFlameChartView.css
+++ b/front_end/panels/timeline/timelineFlameChartView.css
@@ -46,6 +46,21 @@
   }
 }
 
+.overlay-type-CANDY_STRIPED_TIME_RANGE {
+  --red-stripe-width: 2px;
+  --white-stripe-width: 10px;
+
+  background-image:
+    repeating-linear-gradient(
+      315deg,
+      var(--sys-color-error-bright),
+      var(--sys-color-error-bright) var(--red-stripe-width),
+      transparent var(--red-stripe-width),
+      transparent var(--white-stripe-width)
+    );
+  border: 2px solid var(--sys-color-error-bright);
+}
+
 .overlay-type-TIME_RANGE {
   background: linear-gradient(180deg, rgb(255 125 210 / 0%) 0%, rgb(255 125 210 / 15%) 85%); /* stylelint-disable-line plugin/use_theme_colors */
   border-color: var(--ref-palette-pink80);
