RPP: update timespan breakdown overlay
1. Follow the new design with it pinned to the bottom
2. Fix text label overflowing and make sure all sections are checked.
3. Calculate all clientBoundingRects() outside of the loop to avoid
   triggering more recalc styles than required.
4. Fix double margins between the sections.
5. Apply the new heights and stagger them with CSS rather than JS.
6. Update new styles for fonts.

https://screenshot.googleplex.com/eiMqy7YYHRorNuG

Fixed: 352054001
Bug: 344550388
Change-Id: I503d7820966804da296d3cc4e1cc4fb6c3f54d12
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5752822
Auto-Submit: Jack Franklin <jacktfranklin@chromium.org>
Reviewed-by: Nancy Li <nancyly@chromium.org>
Commit-Queue: Nancy Li <nancyly@chromium.org>

--- a/front_end/panels/timeline/timelineFlameChartView.css
+++ b/front_end/panels/timeline/timelineFlameChartView.css
@@ -101,3 +101,9 @@
   max-width: 80%;
   box-shadow: var(--drop-shadow);
 }
+
+.overlay-type-TIMESPAN_BREAKDOWN {
+  /* This overlay is shown at the bottom of the UI, not the top */
+  top: unset;
+  bottom: 0;
+}
