--- a/front_end/panels/timeline/overlays/components/timespanBreakdownOverlay.css
+++ b/front_end/panels/timeline/overlays/components/timespanBreakdownOverlay.css
@@ -9,40 +9,75 @@
   overflow: hidden;
   flex-direction: row;
   justify-content: flex-end;
+  align-items: flex-end;
   width: 100%;
-  height: 100%;
   box-sizing: border-box;
-  padding-bottom: 5px;
 }
 
 .timespan-breakdown-overlay-section {
   border: solid;
-  border-top-color: var(--sys-color-on-primary);
-  border-left-width: thin;
-  border-right-width: thin;
-  border-bottom-width: thick;
-  align-content: flex-end;
+  border-color: var(--sys-color-on-surface);
+  border-left-width: 1px;
+  border-right-width: 1px;
+  border-top-width: 4px;
+  border-bottom: none;
+  align-content: flex-start;
   text-align: center;
   overflow: hidden;
   text-overflow: ellipsis;
   background-image: linear-gradient(360deg, var(--sys-color-on-primary), transparent);
+  height: 90px;
+
+  &:nth-child(odd) {
+    height: 100px;
+  }
+
+  &:nth-child(even) {
+    border-left-width: 0;
+    border-right-width: 0;
+  }
+
+  &:first-child {
+    border-left-width: 1px;
+  }
+
+  &:last-child {
+    border-right-width: 1px;
+  }
 }
 
 .timespan-breakdown-overlay-label {
-  font-style: italic;
+  font-family: var(--default-font-family);
+  font-size: var(--sys-typescale-body2-size);
+  line-height: var(--sys-typescale-body4-line-height);
+  font-weight: var(--ref-typeface-weight-medium);
+  color: var(--sys-color-on-surface);
   text-align: center;
   box-sizing: border-box;
   width: max-content;
-  max-width: 200px;
   padding: 0 3px;
   overflow: hidden;
   text-overflow: ellipsis;
+  text-wrap: nowrap;
+
+  .duration-text {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    text-wrap: nowrap;
+    display: block;
+  }
 
   &.labelHidden {
     /* Have to use this not display: none so it maintains its width */
     user-select: none;
     pointer-events: none;
     visibility: hidden;
+  }
+
+  &.labelTruncated {
+    /* This means the label will show the text that fits with an ellipsis for
+     * the overflow */
+    max-width: 100%;
   }
 
   &.offScreenLeft {
