RPP: update multi-nav accordion styling in sidebar
https://screenshot.googleplex.com/AcPsaw8ReXai68n

Bug: 348591291
Change-Id: Icd2a6854291a3d5af94801b23a0344169f564e7a
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5753002
Auto-Submit: Jack Franklin <jacktfranklin@chromium.org>
Commit-Queue: Alina Varkki <alinavarkki@chromium.org>
Reviewed-by: Alina Varkki <alinavarkki@chromium.org>

--- a/front_end/panels/timeline/components/sidebarInsightsTab.css
+++ b/front_end/panels/timeline/components/sidebarInsightsTab.css
@@ -22,16 +22,32 @@
 
   details[open] {
     flex-grow: 1;
+    border-bottom: 1px solid var(--sys-color-divider);
   }
 
   summary {
-    border-top: 1px solid var(--sys-color-divider);
+    background-color: var(--sys-color-surface2);
     border-bottom: 1px solid var(--sys-color-divider);
-    color: var(--color-text-primary);
-    padding: 3px 4px;
-    font: var(--sys-typescale-body4-medium);
-    text-overflow: ellipsis;
     overflow: hidden;
+    padding: 2px 5px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    font: var(--sys-typescale-body4-medium);
+
+    &:focus {
+      background-color: var(--sys-color-tonal-container);
+    }
+
+    &::marker {
+      color: var(--sys-color-on-surface-subtle);
+      font-size: 11px;
+      line-height: 1;
+    }
+
+    /* make sure the first summary has a top border */
+    details:first-child & {
+      border-top: 1px solid var(--sys-color-divider);
+    }
   }
 }
 
