[RPP Observations] Update color/spacing/sizing to align with mocks
Before:
https://screenshot.googleplex.com/3oL3y6qoPDu3s6a

After:
https://screenshot.googleplex.com/3MZdSvgjJHQfpTa

Dialog before:
https://screenshot.googleplex.com/6rDsqJ9KL58roRj

Dialog after:
https://screenshot.googleplex.com/66pPaxNo3wMttwz

- Use DevTools typography
- "Related element" -> "LCP element"
- Hide interactions list if empty
- Various style and color updates

Bug: 334926021
Change-Id: Iee9648d48245df7af8dd8f33b7894dd52a8e8649
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5752999
Reviewed-by: Jack Franklin <jacktfranklin@chromium.org>
Commit-Queue: Jack Franklin <jacktfranklin@chromium.org>

--- a/front_end/panels/timeline/components/fieldSettingsDialog.css
+++ b/front_end/panels/timeline/components/fieldSettingsDialog.css
@@ -12,13 +12,27 @@ devtools-dialog {
   --override-transparent: rgb(0 0 0 / 50%);
 }
 
+.title {
+  font-size: var(--sys-typescale-headline4-size);
+  line-height: var(--sys-typescale-headline4-line-height);
+  font-weight: var(--ref-typeface-weight-medium);
+}
+
+.section-title {
+  font-size: var(--sys-typescale-headline5-size);
+  line-height: var(--sys-typescale-headline5-line-height);
+  font-weight: var(--ref-typeface-weight-medium);
+}
+
+details > summary {
+  font-size: var(--sys-typescale-body4-size);
+  line-height: var(--sys-typescale-body4-line-height);
+  font-weight: var(--ref-typeface-weight-medium);
+}
+
 .content {
   max-width: 500px;
   padding: 16px;
-}
-
-.content > :first-child {
-  margin-top: 0;
 }
 
 .buttons-section {
