RPP: toggle insights only when clicking the "top" area
This CL updates how we click on the insights to toggle them; when an
insight is expanded any clicks on the actual content should not cause
the insight to close.

Bug: 351758501
Change-Id: Ia1389c38af87bb0580e3aceda46833a2d2993d14
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5752823
Reviewed-by: Andres Olivares <andoli@chromium.org>
Commit-Queue: Andres Olivares <andoli@chromium.org>
Auto-Submit: Jack Franklin <jacktfranklin@chromium.org>
Commit-Queue: Jack Franklin <jacktfranklin@chromium.org>

--- a/front_end/panels/timeline/components/insights/sidebarInsight.css
+++ b/front_end/panels/timeline/components/insights/sidebarInsight.css
@@ -9,20 +9,31 @@
   width: auto;
   height: auto;
   margin: 10px 0;
-  padding: 10px;
-  border-radius: 3px;
+  border-radius: var(--sys-shape-corner-extra-small);
   overflow: hidden;
-  border: 1px solid var(--sys-color-outline);
+  border: 1px solid var(--sys-color-divider);
   background-color: var(--sys-color-base);
 
   &.closed {
-    background-color: var(--sys-color-neutral-container);
+    background-color: var(--sys-color-surface3);
     border: none;
   }
 
   &.closed:hover {
     background-color: var(--sys-color-state-disabled-container);
   }
+
+  header {
+    padding: 10px;
+
+    h3 {
+      font: var(--sys-typescale-body4-medium);
+    }
+  }
+}
+
+.insight-body {
+  padding: 0 10px;
 }
 
 .insight-title {
