RPP: update LCP request discovery details
1. Update the styling based on the latest designs
2. Fix the alignment of the icons in the list of issues.
3. Add the discovery time text (exact text tbc, but this will do for now)

Bug: 351758501
Change-Id: Ia8f0fcf599b76cd96c5a5ab69f3201ef8f608f82
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5756478
Auto-Submit: Jack Franklin <jacktfranklin@chromium.org>
Reviewed-by: Nancy Li <nancyly@chromium.org>
Commit-Queue: Nancy Li <nancyly@chromium.org>

--- a/front_end/panels/timeline/components/insights/sidebarInsight.css
+++ b/front_end/panels/timeline/components/insights/sidebarInsight.css
@@ -57,7 +57,7 @@
 }
 
 .insight-description {
-  border-bottom: 1px solid var(--sys-color-outline);
+  border-bottom: 1px solid var(--sys-color-divider);
   padding-bottom: 10px;
 }
 
@@ -82,7 +82,7 @@
 }
 
 .insight-entry {
-  font-weight: bold;
+  font: var(--sys-typescale-body4-medium);
   padding-block: 2px;
   display: flex;
   align-items: center;
@@ -100,9 +100,13 @@
 }
 
 .element-img-details {
-  font-weight: bold;
+  font: var(--sys-typescale-body4-regular);
 
   .element-img-details-size {
     color: var(--color-text-secondary);
   }
+}
+
+::slotted(*) {
+  font: var(--sys-typescale-body4-regular);
 }
