RPP sidebar: use correct select
I checked with Kim, we want to use the regular <select> which is the one
that will be updated w/ GM3 and brings us inline with the design system.

Bug: 348591291
Change-Id: If5d61b4f157aebbcae97bd36a4ca03491b74d713
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5756818
Commit-Queue: Andres Olivares <andoli@chromium.org>
Commit-Queue: Jack Franklin <jacktfranklin@chromium.org>
Auto-Submit: Jack Franklin <jacktfranklin@chromium.org>
Reviewed-by: Andres Olivares <andoli@chromium.org>

--- a/front_end/panels/timeline/components/sidebarInsightsTab.css
+++ b/front_end/panels/timeline/components/sidebarInsightsTab.css
@@ -51,8 +51,8 @@
   }
 }
 
-devtools-select-menu {
+.insights-category-select {
+  width: max-content;
   margin-top: 10px;
-  height: 25px;
-  border: none;
+  margin-left: 10px;
 }
